fixing aside problems

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,16 @@
 <aside class="sidebar">
   <div class="sidebar-inner">
-    <a href="#" class="person">
-      <div class="person-picture">
-        <img src="../../assets/images/personalphoto.jpg" alt="picture" class="picture">
-      </div>
-      <div class="person-content">
-        <h1 class="person-name">Rima Baltrūnienė</h1>
-        <h2 class="person-position">Waste Water Treatment Plant Project Manager</h2>
-      </div>
-    </a>
+    <div class="person-box">
+      <a [routerLink]="['../','home']" class="person">
+        <div class="person-picture">
+          <img src="../../assets/images/personalphoto.jpg" alt="picture" class="picture">
+        </div>
+      </a>
+    </div>
+    <div class="person-content">
+      <h1 class="person-name">Rima Baltrūnienė</h1>
+      <h2 class="person-position">Waste Water Treatment Plant Project Manager</h2>
+    </div>
 
     <nav class="navigation">
       <ul>
