--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,5 @@ body {
     background-image: url('assets/images/plant-bw.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    // opacity: 0.92;
 }
