--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,26 +5,28 @@
     left: 0;
     position: fixed;
     background: #b30000;
-    // background: #405d27;
-    opacity: 0.9;
+    opacity: 0.93;
     display: flex;
     justify-content: center;
     align-items: center;
     .sidebar-inner {
-        // background: yellow;
         margin-left: 1rem;
         margin-right: 1rem;
-        .person-picture {
-            // background: green;
+        .person-box {
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 1rem;
-            margin-bottom: 1rem;
-            .picture {
+            .person-picture {
                 width: 10rem;
                 height: 10rem;
                 border-radius: 50%;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+                .picture:hover {
+                    // transform: scale(1.05);
+                    transform: rotate(-360deg);
+                    transition: 0.5s; 
+                }
             }
         }
         .person-content {
@@ -73,7 +75,6 @@
 
 a {
     text-decoration: none;
-    // color: rgba(255,255,255,.6);
     // text-transform: uppercase;
     line-height: 30px;
     font-size: 1rem;
@@ -84,3 +85,23 @@ li {
     list-style-type: none;
     text-transform: uppercase;
 }
+
+.picture {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+}
+
+// .person-picture:after {
+//     content: " ";
+//     display: block;
+//     background: url('../../assets/images/personalphoto.jpg') no-repeat;
+//     background-size:cover;
+//     width: 10rem;
+//     height: 10rem;
+//     border-radius: 50%;
+//     // position: relative;
+//     // top: 0;
+//     // left: 0;
+    
+// }
