--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,10 +15,10 @@
     <nav class="navigation">
       <ul>
         <li class=""><a href="#">My skills &amp; offer</a></li>
-        <li class=""><a href="#">Portfolio</a></li>
+        <li class=""><a [routerLink]="['../','projects']">Projects</a></li>
         <li class=""><a href="#">Contact</a></li>
-        <li class=""><a href="#">About me</a></li>
-        <li class=""><a href="#">Personal blog</a></li>
+        <li class=""><a [routerLink]="['../','about']">About me</a></li>
+        <li class=""><a href="#">Gallery</a></li>
         <li class=""><a href="#">My talks</a></li>
       </ul>
     </nav>
