--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -23,8 +23,8 @@
                 margin-top: 1rem;
                 margin-bottom: 1rem;
                 .picture:hover {
-                    // transform: scale(1.05);
-                    transform: rotate(-360deg);
+                    transform: scale(1.03);
+                    // transform: rotate(-360deg);
                     transition: 0.5s; 
                 }
             }
